--- a/main.css
+++ b/main.css
@@ -45,6 +45,8 @@ img {
 .pro {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+    position: relative;
+    /* Add this property */
 }
 
 .pro_grid {
